--- a/src/index.css
+++ b/src/index.css
@@ -218,3 +218,11 @@ code {
 .Hangman * {
   font-style: italic;
 }
+
+
+@media screen and (max-width: 600px) {
+.Hangman {
+  max-width: 320px;
+}
+
+}
