--- a/src/Components/Resources/Resources.module.css
+++ b/src/Components/Resources/Resources.module.css
@@ -20,3 +20,8 @@
     box-shadow: 0px 1px 11px #00000054;
     margin-top: 20px;
 }
+@media screen and (max-width: 600px) {
+    .resource_wrapper {
+        width: 90%;
+    }
+}
