--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -183,4 +183,6 @@ padding: 20px 10px 40px 10px;
     background-color: orange;
     cursor: pointer;
     margin-bottom: 10px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 2px 2px #fff;
 }
