--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -135,6 +135,7 @@ padding: 20px 10px 40px 10px;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .shirt_body img {
@@ -186,3 +187,77 @@ padding: 20px 10px 40px 10px;
     margin-bottom: 10px;
     box-shadow: 0px 0px 2px 2px #fff;
 }
+.accordion_label {
+    width: 100%;
+    max-width: 100px;
+    display: inline-block;
+}
+.accordion_input {
+    border-radius: 5px;
+    padding: 11px 3px;
+    outline: none;
+    border: 2px solid #eb5a27;
+    color: #000;
+    
+}
+.accordion_body {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+.accordion_details {
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+}
+
+
+.dragable_container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 140px;
+    z-index: 10;
+    border: 1px solid red;
+    width: 190px;
+    height: 200px;
+}
+
+.dragable_container span {
+
+    /* border: 1px solid antiquewhite; */
+    cursor: move;
+    user-select: none;
+    /* transition: all .1s; */
+    width: 100%;
+}
+
+@media only screen and (max-width: 992px) {
+    .shirt_inner_fluid {
+
+        flex-direction: column;
+    }
+
+    header {
+        flex-wrap: wrap;
+    }
+
+    .apparel_banner {
+        width: 100%;
+        height: 200px;
+    }
+
+    .accordion_container {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .front_back {
+        top: 15px;
+         left: 10px;
+    }
+
+    .colors {
+        top: 15px;
+        right: 15px;
+    }
+  }
