--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -148,6 +148,7 @@ padding: 20px 10px 40px 10px;
     position: absolute;
     top: 30px;
     left: 44px;
+    z-index: 10;
 }
 
 .front_back div{
@@ -175,6 +176,7 @@ padding: 20px 10px 40px 10px;
     background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
     padding: 15px 15px;
     border-radius: 3px;
+    z-index: 10;
 }
 
 .colors span {
@@ -240,7 +242,9 @@ padding: 20px 10px 40px 10px;
     header {
         flex-wrap: wrap;
     }
-
+    header ul{
+        flex-wrap: wrap;
+    }
     .apparel_banner {
         width: 100%;
         height: 200px;
@@ -259,5 +263,9 @@ padding: 20px 10px 40px 10px;
     .colors {
         top: 15px;
         right: 15px;
+    }
+
+    .shirt_body {
+        width: 100%;
     }
   }
