--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -231,6 +231,7 @@ padding: 20px 10px 40px 10px;
     user-select: none;
     /* transition: all .1s; */
     width: 100%;
+    display: inline-block;
 }
 
 @media only screen and (max-width: 992px) {
