--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -196,10 +196,11 @@ padding: 20px 10px 40px 10px;
 }
 .accordion_input {
     border-radius: 5px;
-    padding: 11px 3px;
+    padding: 11px 13px;
     outline: none;
     border: 2px solid #eb5a27;
     color: #000;
+    width: 172px;
     
 }
 .accordion_body {
@@ -232,8 +233,44 @@ padding: 20px 10px 40px 10px;
     /* transition: all .1s; */
     width: 100%;
     display: inline-block;
+    text-align: center;
 }
 
+.ui_select {
+    width: 100%;
+    border-radius: 5px;
+    padding: 11px 3px;
+    outline: none;
+    border: 2px solid #eb5a27;
+    color: #000;
+    width: 172px;
+    background-color: #fff;
+    height: 42px;
+}
+
+
+.ui_select .MuiSvgIcon-root path{
+    fill: #000;
+}
+
+.ui_select fieldset {
+    display: none;
+}
+
+.ui_select svg path{
+    fill: #000;
+}
+
+.accordion_body * {
+    font-family: "Roboto";
+    font-weight: bolder;
+}
+
+.colorPicker {
+    width: 150px !important;
+}
+
+    
 @media only screen and (max-width: 992px) {
     .shirt_inner_fluid {
 
@@ -269,5 +306,12 @@ padding: 20px 10px 40px 10px;
     .shirt_body {
         width: 100%;
         flex: 0 0 100%;
+    }
+
+    .dragable_container {
+        top: 160px;
+        z-index: 10;
+        width: 157px;
+        height: 200px;
     }
   }
