--- a/src/Components/ShirtDraw/shirtdraw.module.css
+++ b/src/Components/ShirtDraw/shirtdraw.module.css
@@ -270,6 +270,38 @@ padding: 20px 10px 40px 10px;
     width: 150px !important;
 }
 
+
+.addImage {
+    width: 100%;
+    /* height: 100px; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+   
+}
+.drawimg_wrapper {
+    display: flex;
+flex-direction: column;
+width: 48%;
+margin-bottom: 10px;
+}
+
+.addImage img{
+    width: 100%;
+    height: 100px;
+    object-fit: contain;
+    cursor: pointer;
+background: linear-gradient(to left, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.add {
+    text-align: center;
+    padding: 3px 3px;
+    background: #8E2DE2;  /* fallback for old browsers */
+background: linear-gradient(to left, #4A00E0, #8E2DE2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+cursor: pointer;
+}
     
 @media only screen and (max-width: 992px) {
     .shirt_inner_fluid {
