add game without time restart

--- a/src/Components/TypeGame/TypeGame.module.css
+++ b/src/Components/TypeGame/TypeGame.module.css
@@ -42,10 +42,17 @@
 }
 
 
+
+
+
+.black  {
+    color: black;
+}
+
 .green {
     color: green;
 }
-
 .red {
     color: red;
+    text-decoration: underline;
 }
