--- a/src/Components/TypeGame/TypeGame.module.css
+++ b/src/Components/TypeGame/TypeGame.module.css
@@ -58,7 +58,7 @@
 }
 
 .smaltext {
-    color: yellow;
+    color: #00ff00;
     font-weight: bold;
     font-size: 20px;
     text-align: center;
@@ -69,3 +69,33 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 580px) {
+    /* CSS stuff */
+
+    .score {
+        font-size: 32px;
+    }
+
+    .test {
+        padding: 0 10px;
+    }
+
+    .typeContainer {
+        max-width: 500px;
+        border-radius: 10px;
+        background-color: yellow;
+        margin: 20px auto 10px;
+        padding: 10px;
+    }
+
+    .typeText {
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 10px;
+    }
+
+    .textare {
+        font-size: 14px;
+    }
+ }
