--- a/src/index.css
+++ b/src/index.css
@@ -712,11 +712,13 @@ code {
 
 .task_container {
   display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: flex-start;
   max-width: 1000px;
   width: 100%;
   margin: 3% auto 1%;
+  
+
 }
 
 .task_list_continer {
@@ -729,6 +731,8 @@ code {
     position: relative;
     white-space: normal;
    width: 32%;
+   margin-right: 1%;
+   
    
 }
 
@@ -784,7 +788,7 @@ code {
 }
 
 .todo_card {
-  padding: 8px 10px;
+  padding: 8px 22px 8px 10px;
     background: #fff;
     width: 95%;
     margin: 0 auto 5px;
@@ -815,6 +819,7 @@ code {
     right: 4px;
     opacity: 0.8;
     cursor: pointer;
+    z-index: 100;
 }
 
 
@@ -857,6 +862,7 @@ code {
   padding: 6px 12px 6px 8px;
   text-decoration: none;
   transition: transform 85ms ease-in;
+  white-space: nowrap;
 }
 
 .todo_edit li:hover {
