--- a/src/Components/PersonToDoList/Prs.css
+++ b/src/Components/PersonToDoList/Prs.css
@@ -62,6 +62,17 @@
     color: #F25022;
     background-color: #fff;
     box-shadow: none  !important;
+    position: relative;
+}
+
+.header_upload .com_img {
+    position: absolute;
+    right: 0;
+    text-align: 0;
+    width: 46px;
+    height: 99%;
+    border-radius: 3px;
+    object-fit: cover;
 }
 .header_inputs .header_upload:hover{
     border: 1px solid #F25022;
